homework/5.kubernetes-network/bd_redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-dba
  namespace: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-dba
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pg-dba
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 1000Mi
          limits:
            cpu: 500m
            memory: 1000Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pg-storage
