homework/5.kubernetes-network/service_db_redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: redmine
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pg-dba
  type: ClusterIP
